--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,8 @@ body > div {
 .cardHolder {
 	padding: 0 10px;
 	display: flex;
-	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .card {
