handle running out of cards if less than full set

--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@ body > div {
 
 .list_item.done {
 	border-color: #aaa;
-	color: #aaa;
+	color: #fff;
 	background-color: #999;
 	cursor: unset;
 }
